
  Added log=F option to write trace log to a file.

  Added slowops=N option which enables profiling of potentially slow
    perl opcodes (e.g., system calls and regexs). They're treated like xsubs.
    slowops=1 puts timings into one package ("CORE::", eg CORE::sleep)
    slowops=2 puts timings into into the package that made the
    call, e.g., "Foo::CORE:sleep" (note the single colon).

Changes to subroutine profiler:

  Rewritten. Captures more data more accurately and robustly.

  Added recording the name of the calling subroutine to enable proper
    linking of call trees. Previously only the calling file and line
    were recorded. (This is more significant than it sounds :)

  Added docs describing how the subroutine profiler works.

Changes to nytprofhtml:

  Added interactive treemap view of package and subroutine times.
    Left-click to zoom in (drill-down) one level, right-click to zoom out.

  Added generation of GraphViz dot language files to visualize
    the call graph. A top-level link on the index page provides an
    inter-package graph, and per-source-file links provide a graph
    of sub calls in to, out of, and between the subs in the file.
    See http://en.wikipedia.org/wiki/Graphviz

  Added columns to the main source code reports to show
    a count of sub calls and time spent in those calls.

  Assorted cosmetic improvements.
  Changed colors on report pages to be less saturated.


=head2 Changes in Devel::NYTProf 2.10 (svn r774) 18th June 2009

  Fixed call count for XSubs that was one too high.
  Fixed enable_profile() after fork thanks to delamonpansie
    http://code.google.com/p/perl-devel-nytprof/issues/detail?id=15
  Fixed to use correct scripts during test and so avoid permissions
    issues, thanks to David Golden.
  Fixed suprious "Unable to determine line number" warnings
    when using options like -p, -n, -Mfoo.

  Changed enable_profile() to discard the time spent since
    profile was disabled.